--- a/00 Hello World.ipynb
+++ b/00 Hello World.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -819,7 +819,7 @@
       "OK: http://www.congreso.es/public_oficiales/L14/CONG/DS/PL/DSCD-14-PL-55.PDF\n",
       "OK: http://www.congreso.es/public_oficiales/L14/CONG/DS/PL/DSCD-14-PL-56.PDF\n",
       "OK: http://www.congreso.es/public_oficiales/L14/CONG/DS/PL/DSCD-14-PL-57.PDF\n",
-      "KO: 14 58\n",
+      "OK: http://www.congreso.es/public_oficiales/L14/CONG/DS/PL/DSCD-14-PL-58.PDF\n",
       "KO: 14 59\n",
       "KO: 14 60\n",
       "KO: 14 61\n",
@@ -871,13 +871,13 @@
     "    url = f'http://www.congreso.es/public_oficiales/L{idLegislature}/CONG/DS/PL/DSCD-{idLegislature}-PL-{idPleno}.PDF'\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
-    "        with open(f'data/diaries/DSCD-{idLegislature}-PL-{idPleno}.PDF', 'wb') as file:\n",
+    "        with open(f'data/diaries/DSCD-{idLegislature:02d}-PL-{idPleno:03d}.PDF', 'wb') as file:\n",
     "            file.write(response.content)\n",
     "        return url\n",
     "    return None\n",
     "\n",
     "consecutive_errors = 0\n",
-    "for legislature in range (1, 15):\n",
+    "for legislature in range (10, 15):\n",
     "    consecutive_errors = 0\n",
     "    for pleno in range(1, 100):\n",
     "        path = download_pdf(legislature, pleno)\n",
@@ -893,13 +893,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DSCD-11-PL-002.PDF\n",
+      "DSCD-11-PL-003.PDF\n",
+      "DSCD-11-PL-004.PDF\n",
+      "DSCD-11-PL-005.PDF\n",
+      "DSCD-11-PL-006.PDF\n",
+      "DSCD-11-PL-007.PDF\n",
+      "DSCD-11-PL-008.PDF\n",
+      "DSCD-11-PL-009.PDF\n",
+      "DSCD-11-PL-010.PDF\n",
+      "DSCD-11-PL-011.PDF\n",
+      "DSCD-11-PL-013.PDF\n",
+      "DSCD-11-PL-014.PDF\n",
+      "DSCD-11-PL-015.PDF\n",
+      "DSCD-12-PL-001.PDF\n",
+      "DSCD-12-PL-002.PDF\n",
+      "DSCD-12-PL-003.PDF\n",
+      "DSCD-12-PL-004.PDF\n",
+      "DSCD-12-PL-005.PDF\n",
+      "DSCD-12-PL-006.PDF\n",
+      "DSCD-12-PL-007.PDF\n",
+      "DSCD-12-PL-008.PDF\n",
+      "DSCD-12-PL-009.PDF\n",
+      "DSCD-12-PL-010.PDF\n",
+      "DSCD-12-PL-011.PDF\n",
+      "DSCD-12-PL-012.PDF\n",
+      "DSCD-12-PL-013.PDF\n",
+      "DSCD-12-PL-014.PDF\n",
+      "DSCD-12-PL-015.PDF\n",
+      "DSCD-12-PL-016.PDF\n",
+      "DSCD-12-PL-017.PDF\n",
+      "DSCD-12-PL-018.PDF\n",
+      "DSCD-12-PL-019.PDF\n",
+      "DSCD-12-PL-020.PDF\n",
+      "DSCD-12-PL-021.PDF\n",
+      "DSCD-12-PL-022.PDF\n",
+      "DSCD-12-PL-023.PDF\n",
+      "DSCD-12-PL-024.PDF\n",
+      "DSCD-12-PL-025.PDF\n",
+      "DSCD-12-PL-026.PDF\n",
+      "DSCD-12-PL-027.PDF\n",
+      "DSCD-12-PL-028.PDF\n",
+      "DSCD-12-PL-029.PDF\n",
+      "DSCD-12-PL-030.PDF\n",
+      "DSCD-12-PL-031.PDF\n",
+      "DSCD-12-PL-032.PDF\n",
+      "DSCD-12-PL-033.PDF\n",
+      "DSCD-12-PL-034.PDF\n",
+      "DSCD-12-PL-035.PDF\n",
+      "DSCD-12-PL-036.PDF\n",
+      "DSCD-12-PL-037.PDF\n",
+      "DSCD-12-PL-038.PDF\n",
+      "DSCD-12-PL-039.PDF\n",
+      "DSCD-12-PL-040.PDF\n",
+      "DSCD-12-PL-041.PDF\n",
+      "DSCD-12-PL-042.PDF\n",
+      "DSCD-12-PL-043.PDF\n",
+      "DSCD-12-PL-044.PDF\n",
+      "DSCD-12-PL-045.PDF\n",
+      "DSCD-12-PL-046.PDF\n",
+      "DSCD-12-PL-047.PDF\n",
+      "DSCD-12-PL-048.PDF\n",
+      "DSCD-12-PL-049.PDF\n",
+      "DSCD-12-PL-050.PDF\n",
+      "DSCD-12-PL-051.PDF\n",
+      "DSCD-12-PL-052.PDF\n",
+      "DSCD-12-PL-053.PDF\n",
+      "DSCD-12-PL-054.PDF\n",
+      "DSCD-12-PL-055.PDF\n",
+      "DSCD-12-PL-057.PDF\n",
+      "DSCD-12-PL-058.PDF\n",
+      "DSCD-12-PL-059.PDF\n",
+      "DSCD-12-PL-061.PDF\n",
+      "DSCD-12-PL-062.PDF\n",
+      "DSCD-12-PL-063.PDF\n",
+      "DSCD-12-PL-064.PDF\n",
+      "DSCD-12-PL-065.PDF\n",
+      "DSCD-12-PL-066.PDF\n",
+      "DSCD-12-PL-067.PDF\n",
+      "DSCD-12-PL-068.PDF\n",
+      "DSCD-12-PL-069.PDF\n",
+      "DSCD-12-PL-070.PDF\n",
+      "DSCD-12-PL-071.PDF\n",
+      "DSCD-12-PL-072.PDF\n",
+      "DSCD-12-PL-073.PDF\n",
+      "DSCD-12-PL-074.PDF\n",
+      "DSCD-12-PL-075.PDF\n",
+      "DSCD-12-PL-076.PDF\n",
+      "DSCD-12-PL-077.PDF\n",
+      "DSCD-12-PL-078.PDF\n",
+      "DSCD-12-PL-079.PDF\n",
+      "DSCD-12-PL-080.PDF\n",
+      "DSCD-12-PL-081.PDF\n",
+      "DSCD-12-PL-082.PDF\n",
+      "DSCD-12-PL-083.PDF\n",
+      "DSCD-12-PL-084.PDF\n",
+      "DSCD-12-PL-085.PDF\n",
+      "DSCD-12-PL-086.PDF\n",
+      "DSCD-12-PL-088.PDF\n",
+      "DSCD-12-PL-089.PDF\n",
+      "DSCD-12-PL-090.PDF\n",
+      "DSCD-12-PL-091.PDF\n",
+      "DSCD-12-PL-092.PDF\n",
+      "DSCD-12-PL-093.PDF\n",
+      "DSCD-12-PL-094.PDF\n",
+      "DSCD-12-PL-095.PDF\n",
+      "DSCD-12-PL-096.PDF\n",
+      "DSCD-12-PL-097.PDF\n",
+      "DSCD-12-PL-098.PDF\n",
+      "DSCD-12-PL-099.PDF\n",
+      "DSCD-13-PL-002.PDF\n",
+      "DSCD-13-PL-003.PDF\n",
+      "DSCD-13-PL-004.PDF\n",
+      "DSCD-13-PL-005.PDF\n",
+      "DSCD-13-PL-006.PDF\n",
+      "DSCD-13-PL-007.PDF\n",
+      "DSCD-13-PL-008.PDF\n",
+      "DSCD-13-PL-009.PDF\n",
+      "DSCD-13-PL-010.PDF\n",
+      "DSCD-13-PL-011.PDF\n",
+      "DSCD-13-PL-012.PDF\n",
+      "DSCD-13-PL-013.PDF\n",
+      "DSCD-13-PL-014.PDF\n",
+      "DSCD-13-PL-015.PDF\n",
+      "DSCD-14-PL-002.PDF\n",
+      "DSCD-14-PL-003.PDF\n",
+      "DSCD-14-PL-004.PDF\n",
+      "DSCD-14-PL-005.PDF\n",
+      "DSCD-14-PL-006.PDF\n",
+      "DSCD-14-PL-007.PDF\n",
+      "DSCD-14-PL-008.PDF\n",
+      "DSCD-14-PL-009.PDF\n",
+      "DSCD-14-PL-010.PDF\n",
+      "DSCD-14-PL-011.PDF\n",
+      "DSCD-14-PL-012.PDF\n",
+      "DSCD-14-PL-013.PDF\n",
+      "DSCD-14-PL-014.PDF\n",
+      "DSCD-14-PL-015.PDF\n",
+      "DSCD-14-PL-016.PDF\n",
+      "DSCD-14-PL-017.PDF\n",
+      "DSCD-14-PL-018.PDF\n",
+      "DSCD-14-PL-020.PDF\n",
+      "DSCD-14-PL-021.PDF\n",
+      "DSCD-14-PL-022.PDF\n",
+      "DSCD-14-PL-023.PDF\n",
+      "DSCD-14-PL-024.PDF\n",
+      "DSCD-14-PL-026.PDF\n",
+      "DSCD-14-PL-027.PDF\n",
+      "DSCD-14-PL-028.PDF\n",
+      "DSCD-14-PL-029.PDF\n",
+      "DSCD-14-PL-030.PDF\n",
+      "DSCD-14-PL-031.PDF\n",
+      "DSCD-14-PL-032.PDF\n",
+      "DSCD-14-PL-033.PDF\n",
+      "DSCD-14-PL-034.PDF\n",
+      "DSCD-14-PL-035.PDF\n",
+      "DSCD-14-PL-036.PDF\n",
+      "DSCD-14-PL-037.PDF\n",
+      "DSCD-14-PL-038.PDF\n",
+      "DSCD-14-PL-039.PDF\n",
+      "DSCD-14-PL-040.PDF\n",
+      "DSCD-14-PL-041.PDF\n",
+      "DSCD-14-PL-042.PDF\n",
+      "DSCD-14-PL-043.PDF\n",
+      "DSCD-14-PL-044.PDF\n",
+      "DSCD-14-PL-045.PDF\n",
+      "DSCD-14-PL-046.PDF\n",
+      "DSCD-14-PL-047.PDF\n",
+      "DSCD-14-PL-048.PDF\n",
+      "DSCD-14-PL-049.PDF\n",
+      "DSCD-14-PL-050.PDF\n",
+      "DSCD-14-PL-051.PDF\n",
+      "DSCD-14-PL-052.PDF\n",
+      "DSCD-14-PL-053.PDF\n",
+      "DSCD-14-PL-054.PDF\n",
+      "DSCD-14-PL-055.PDF\n",
+      "DSCD-14-PL-056.PDF\n",
+      "DSCD-14-PL-057.PDF\n",
+      "DSCD-14-PL-058.PDF\n"
+     ]
+    }
+   ],
    "source": [
     "from subprocess import call\n",
     "from os import listdir, mkdir\n",
@@ -912,6 +1097,7 @@
     "\n",
     "process = 'ReadPdf/ReadPdf/bin/Release/net472/ReadPdf.exe'\n",
     "for file in files:\n",
+    "    print(file)\n",
     "    src = join(pdfsPath, file)\n",
     "    dst = join(txtPath, file[:-4] + '.txt')\n",
     "    call([process, src, dst])"
