--- a/03 Cleaning.ipynb
+++ b/03 Cleaning.ipynb
@@ -2,26 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle    "
+    "import pickle    \n",
+    "import numpy\n",
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import SnowballStemmer\n",
+    "\n",
+    "spanish_stopwords = stopwords.words('spanish')\n",
+    "spanish_sentence_tokenizer = nltk.data.load('tokenizers/punkt/spanish.pickle')\n",
+    "spanish_stemmer = SnowballStemmer('spanish')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./data/data.json', 'rb') as file:\n",
-    "    data = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -35,33 +34,60 @@
     }
    ],
    "source": [
-    "print(data[0])"
+    "with open('./data/data.json', 'rb') as file:\n",
+    "    data = pickle.load(file)\n",
+    "    \n",
+    "print(data[0])\n",
+    "text = data[0].text"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy\n",
-    "import nltk"
+    "# Tokenizer"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# nltk.download()\n",
-    "\n",
-    "tokenizer = nltk.data.load('tokenizers/punkt/spanish.pickle')"
+    "## Sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Señorías, antes de nada quiero recordar a quienes ocupan las tribunas de invitados que no pueden hacer manifestaciones de ningún tipo mientras dura la sesión.',\n",
+       " 'Se abre la sesión con el único punto en el orden del día, como ustedes saben, relativo al debate sobre la investidura del candidato a la Presidencia del Gobierno.',\n",
+       " 'Para ello, por la secretaria primera de la Cámara se va a proceder a la lectura de la propuesta de candidato a la Presidencia del Gobierno.']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences = spanish_sentence_tokenizer.tokenize(text)\n",
+    "sentences\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -93,83 +119,29 @@
        " 'dura',\n",
        " 'la',\n",
        " 'sesión',\n",
-       " '.',\n",
-       " 'Se',\n",
-       " 'abre',\n",
-       " 'la',\n",
-       " 'sesión',\n",
-       " 'con',\n",
-       " 'el',\n",
-       " 'único',\n",
-       " 'punto',\n",
-       " 'en',\n",
-       " 'el',\n",
-       " 'orden',\n",
-       " 'del',\n",
-       " 'día',\n",
-       " ',',\n",
-       " 'como',\n",
-       " 'ustedes',\n",
-       " 'saben',\n",
-       " ',',\n",
-       " 'relativo',\n",
-       " 'al',\n",
-       " 'debate',\n",
-       " 'sobre',\n",
-       " 'la',\n",
-       " 'investidura',\n",
-       " 'del',\n",
-       " 'candidato',\n",
-       " 'a',\n",
-       " 'la',\n",
-       " 'Presidencia',\n",
-       " 'del',\n",
-       " 'Gobierno',\n",
-       " '.',\n",
-       " 'Para',\n",
-       " 'ello',\n",
-       " ',',\n",
-       " 'por',\n",
-       " 'la',\n",
-       " 'secretaria',\n",
-       " 'primera',\n",
-       " 'de',\n",
-       " 'la',\n",
-       " 'Cámara',\n",
-       " 'se',\n",
-       " 'va',\n",
-       " 'a',\n",
-       " 'proceder',\n",
-       " 'a',\n",
-       " 'la',\n",
-       " 'lectura',\n",
-       " 'de',\n",
-       " 'la',\n",
-       " 'propuesta',\n",
-       " 'de',\n",
-       " 'candidato',\n",
-       " 'a',\n",
-       " 'la',\n",
-       " 'Presidencia',\n",
-       " 'del',\n",
-       " 'Gobierno',\n",
        " '.']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from nltk.tokenize import word_tokenize\n",
-    "tokens = word_tokenize(data[0].text)\n",
-    "tokens"
+    "words = word_tokenize(sentences[0])\n",
+    "words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -190,63 +162,29 @@
        " 'mientras',\n",
        " 'dura',\n",
        " 'sesión',\n",
-       " '.',\n",
-       " 'Se',\n",
-       " 'abre',\n",
-       " 'sesión',\n",
-       " 'único',\n",
-       " 'punto',\n",
-       " 'orden',\n",
-       " 'día',\n",
-       " ',',\n",
-       " 'ustedes',\n",
-       " 'saben',\n",
-       " ',',\n",
-       " 'relativo',\n",
-       " 'debate',\n",
-       " 'investidura',\n",
-       " 'candidato',\n",
-       " 'Presidencia',\n",
-       " 'Gobierno',\n",
-       " '.',\n",
-       " 'Para',\n",
-       " 'ello',\n",
-       " ',',\n",
-       " 'secretaria',\n",
-       " 'primera',\n",
-       " 'Cámara',\n",
-       " 'va',\n",
-       " 'proceder',\n",
-       " 'lectura',\n",
-       " 'propuesta',\n",
-       " 'candidato',\n",
-       " 'Presidencia',\n",
-       " 'Gobierno',\n",
        " '.']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from nltk.corpus import stopwords\n",
-    "spanish_stopwords = stopwords.words('spanish')\n",
-    "\n",
-    "tokens = [t for t in tokens if t not in spanish_stopwords]\n",
-    "tokens\n",
-    "#spanish_stemmer = SnowballStemmer('spanish')\n",
-    "#spanish_stopwords = stopwords.words('spanish')\n",
-    "#from nltk.stem import SnowballStemmer\n",
-    "#tokens = word_tokenize(data[0].text)\n",
-    "#spanish_stopwords\n",
-    "#[spanish_stemmer.stem(t) for t in tokens]"
+    "tokens_without_stopwords = [t for t in words if t not in spanish_stopwords]\n",
+    "tokens_without_stopwords"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stemming"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -267,49 +205,17 @@
        " 'mientr',\n",
        " 'dur',\n",
        " 'sesion',\n",
-       " '.',\n",
-       " 'se',\n",
-       " 'abre',\n",
-       " 'sesion',\n",
-       " 'unic',\n",
-       " 'punt',\n",
-       " 'orden',\n",
-       " 'dia',\n",
-       " ',',\n",
-       " 'usted',\n",
-       " 'sab',\n",
-       " ',',\n",
-       " 'relat',\n",
-       " 'debat',\n",
-       " 'investidur',\n",
-       " 'candidat',\n",
-       " 'president',\n",
-       " 'gobiern',\n",
-       " '.',\n",
-       " 'par',\n",
-       " 'ello',\n",
-       " ',',\n",
-       " 'secretari',\n",
-       " 'primer',\n",
-       " 'cam',\n",
-       " 'va',\n",
-       " 'proced',\n",
-       " 'lectur',\n",
-       " 'propuest',\n",
-       " 'candidat',\n",
-       " 'president',\n",
-       " 'gobiern',\n",
        " '.']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from nltk.stem import SnowballStemmer\n",
-    "[spanish_stemmer.stem(t) for t in tokens]"
+    "tokens_stemming = [spanish_stemmer.stem(t) for t in tokens_without_stopwords]\n",
+    "tokens_stemming"
    ]
   }
  ],
