wordned 3.0 spa & freeling

--- a/02 Read PDF.ipynb
+++ b/02 Read PDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,499 +39,35 @@
     "        sps = debate.get_speaches()\n",
     "        for s in sps:\n",
     "            data.append(TextData(s.speach, {\n",
-    "                \"speacker\": s.speacker\n",
-    "            }))\n",
+    "                \"speacker\": s.speacker,\n",
+    "                \"debate\": debate.title,\n",
+    "                \"path\": path\n",
+    "            }))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(data[14555])\n",
+    "# print(data[14556])\n",
+    "# print(data[14557])\n",
+    "# print(data[14558])\n",
+    "# print(data[14559])\n",
+    "# print(data[14560])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./data/data.pickle', 'wb') as file:\n",
+    "    pickle.dump(data, file)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./data/data.json', 'wb') as file:\n",
-    "    pickle.dump(data, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Gracias,',\n",
-       " 'presidente.',\n",
-       " 'De',\n",
-       " 'acuerdo',\n",
-       " 'con',\n",
-       " 'lo',\n",
-       " 'establecido',\n",
-       " 'en',\n",
-       " 'el',\n",
-       " 'artículo',\n",
-       " '99.1',\n",
-       " 'de',\n",
-       " 'la',\n",
-       " 'Constitución,',\n",
-       " 'tras',\n",
-       " 'celebrar',\n",
-       " 'consultas',\n",
-       " 'con',\n",
-       " 'los',\n",
-       " 'representantes',\n",
-       " 'designados',\n",
-       " 'por',\n",
-       " 'los',\n",
-       " 'grupos',\n",
-       " 'políticos',\n",
-       " 'con',\n",
-       " 'representación',\n",
-       " 'parlamentaria,',\n",
-       " 'vengo',\n",
-       " 'en',\n",
-       " 'proponer',\n",
-       " 'al',\n",
-       " 'Excmo.',\n",
-       " 'señor',\n",
-       " 'don',\n",
-       " 'Pedro',\n",
-       " 'Sánchez',\n",
-       " 'Pérez-Castejón,',\n",
-       " 'como',\n",
-       " 'candidato',\n",
-       " 'a',\n",
-       " 'la',\n",
-       " 'Presidencia',\n",
-       " 'del',\n",
-       " 'Gobierno.',\n",
-       " 'Lo',\n",
-       " 'que',\n",
-       " 'comunico',\n",
-       " 'a',\n",
-       " 'V.E.',\n",
-       " 'para',\n",
-       " 'que',\n",
-       " 'se',\n",
-       " 'formule',\n",
-       " 'al',\n",
-       " 'Congreso',\n",
-       " 'de',\n",
-       " 'los',\n",
-       " 'Diputados',\n",
-       " 'la',\n",
-       " 'oportuna',\n",
-       " 'propuesta.',\n",
-       " 'Palacio',\n",
-       " 'de',\n",
-       " 'la',\n",
-       " 'Zarzuela,',\n",
-       " '2',\n",
-       " 'de',\n",
-       " 'febrero',\n",
-       " 'de',\n",
-       " '2016.',\n",
-       " 'Felipe',\n",
-       " 'VI,',\n",
-       " 'Rey.',\n",
-       " 'El',\n",
-       " 'presidente',\n",
-       " 'del',\n",
-       " 'Congreso',\n",
-       " 'de',\n",
-       " 'los',\n",
-       " 'Diputados,',\n",
-       " 'Patxi',\n",
-       " 'López',\n",
-       " 'Álvarez.']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Gracias',\n",
-       " 'presidente',\n",
-       " 'De',\n",
-       " 'acuerdo',\n",
-       " 'con',\n",
-       " 'lo',\n",
-       " 'establecido',\n",
-       " 'en',\n",
-       " 'el',\n",
-       " 'artículo',\n",
-       " '99',\n",
-       " '1',\n",
-       " 'de',\n",
-       " 'la',\n",
-       " 'Constitución',\n",
-       " 'tras',\n",
-       " 'celebrar',\n",
-       " 'consultas',\n",
-       " 'con',\n",
-       " 'los',\n",
-       " 'representantes',\n",
-       " 'designados',\n",
-       " 'por',\n",
-       " 'los',\n",
-       " 'grupos',\n",
-       " 'políticos',\n",
-       " 'con',\n",
-       " 'representación',\n",
-       " 'parlamentaria',\n",
-       " 'vengo',\n",
-       " 'en',\n",
-       " 'proponer',\n",
-       " 'al',\n",
-       " 'Excmo',\n",
-       " 'señor',\n",
-       " 'don',\n",
-       " 'Pedro',\n",
-       " 'Sánchez',\n",
-       " 'Pérez',\n",
-       " 'Castejón',\n",
-       " 'como',\n",
-       " 'candidato',\n",
-       " 'a',\n",
-       " 'la',\n",
-       " 'Presidencia',\n",
-       " 'del',\n",
-       " 'Gobierno',\n",
-       " 'Lo',\n",
-       " 'que',\n",
-       " 'comunico',\n",
-       " 'a',\n",
-       " 'V',\n",
-       " 'E',\n",
-       " 'para',\n",
-       " 'que',\n",
-       " 'se',\n",
-       " 'formule',\n",
-       " 'al',\n",
-       " 'Congreso',\n",
-       " 'de',\n",
-       " 'los',\n",
-       " 'Diputados',\n",
-       " 'la',\n",
-       " 'oportuna',\n",
-       " 'propuesta',\n",
-       " 'Palacio',\n",
-       " 'de',\n",
-       " 'la',\n",
-       " 'Zarzuela',\n",
-       " '2',\n",
-       " 'de',\n",
-       " 'febrero',\n",
-       " 'de',\n",
-       " '2016',\n",
-       " 'Felipe',\n",
-       " 'VI',\n",
-       " 'Rey',\n",
-       " 'El',\n",
-       " 'presidente',\n",
-       " 'del',\n",
-       " 'Congreso',\n",
-       " 'de',\n",
-       " 'los',\n",
-       " 'Diputados',\n",
-       " 'Patxi',\n",
-       " 'López',\n",
-       " 'Álvarez',\n",
-       " '']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pattern = re.compile(r'[-\\s.,;:!¡?¿]+')\n",
-    "tokens2 = pattern.split(fullText)\n",
-    "tokens2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Gracias, presidente. De acuerdo con lo establecido en el artículo 99.1 de la Constitución, tras celebrar consultas con los representantes designados por los grupos políticos con representación parlamentaria, vengo en proponer al Excmo. señor don Pedro Sánchez Pérez-Castejón, como candidato a la Presidencia del Gobierno. Lo que comunico a V.E. para que se formule al Congreso de los Diputados la oportuna propuesta. Palacio de la Zarzuela, 2 de febrero de 2016. Felipe VI, Rey. El presidente del Congreso de los Diputados, Patxi López Álvarez.'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fullText"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Gracias',\n",
-       " ',',\n",
-       " 'presidente',\n",
-       " '.',\n",
-       " 'De',\n",
-       " 'acuerdo',\n",
-       " 'con',\n",
-       " 'lo',\n",
-       " 'establecido',\n",
-       " 'en',\n",
-       " 'el',\n",
-       " 'artículo',\n",
-       " '99.1',\n",
-       " 'de',\n",
-       " 'la',\n",
-       " 'Constitución',\n",
-       " ',',\n",
-       " 'tras',\n",
-       " 'celebrar',\n",
-       " 'consultas',\n",
-       " 'con',\n",
-       " 'los',\n",
-       " 'representantes',\n",
-       " 'designados',\n",
-       " 'por',\n",
-       " 'los',\n",
-       " 'grupos',\n",
-       " 'políticos',\n",
-       " 'con',\n",
-       " 'representación',\n",
-       " 'parlamentaria',\n",
-       " ',',\n",
-       " 'vengo',\n",
-       " 'en',\n",
-       " 'proponer',\n",
-       " 'al',\n",
-       " 'Excmo',\n",
-       " '.',\n",
-       " 'señor',\n",
-       " 'don',\n",
-       " 'Pedro',\n",
-       " 'Sánchez',\n",
-       " 'Pérez-Castejón',\n",
-       " ',',\n",
-       " 'como',\n",
-       " 'candidato',\n",
-       " 'a',\n",
-       " 'la',\n",
-       " 'Presidencia',\n",
-       " 'del',\n",
-       " 'Gobierno',\n",
-       " '.',\n",
-       " 'Lo',\n",
-       " 'que',\n",
-       " 'comunico',\n",
-       " 'a',\n",
-       " 'V.E',\n",
-       " '.',\n",
-       " 'para',\n",
-       " 'que',\n",
-       " 'se',\n",
-       " 'formule',\n",
-       " 'al',\n",
-       " 'Congreso',\n",
-       " 'de',\n",
-       " 'los',\n",
-       " 'Diputados',\n",
-       " 'la',\n",
-       " 'oportuna',\n",
-       " 'propuesta',\n",
-       " '.',\n",
-       " 'Palacio',\n",
-       " 'de',\n",
-       " 'la',\n",
-       " 'Zarzuela',\n",
-       " ',',\n",
-       " '2',\n",
-       " 'de',\n",
-       " 'febrero',\n",
-       " 'de',\n",
-       " '2016',\n",
-       " '.',\n",
-       " 'Felipe',\n",
-       " 'VI',\n",
-       " ',',\n",
-       " 'Rey',\n",
-       " '.',\n",
-       " 'El',\n",
-       " 'presidente',\n",
-       " 'del',\n",
-       " 'Congreso',\n",
-       " 'de',\n",
-       " 'los',\n",
-       " 'Diputados',\n",
-       " ',',\n",
-       " 'Patxi',\n",
-       " 'López',\n",
-       " 'Álvarez',\n",
-       " '.']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import nltk\n",
-    "tokenizer=nltk.data.load('tokenizers/punkt/spanish.pickle')\n",
-    "\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "tokens = word_tokenize(fullText)\n",
-    "tokens\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Gracias , presidente',\n",
-       " ', presidente .',\n",
-       " 'presidente . De',\n",
-       " '. De acuerdo',\n",
-       " 'De acuerdo con',\n",
-       " 'acuerdo con lo',\n",
-       " 'con lo establecido',\n",
-       " 'lo establecido en',\n",
-       " 'establecido en el',\n",
-       " 'en el artículo',\n",
-       " 'el artículo 99.1',\n",
-       " 'artículo 99.1 de',\n",
-       " '99.1 de la',\n",
-       " 'de la Constitución',\n",
-       " 'la Constitución ,',\n",
-       " 'Constitución , tras',\n",
-       " ', tras celebrar',\n",
-       " 'tras celebrar consultas',\n",
-       " 'celebrar consultas con',\n",
-       " 'consultas con los',\n",
-       " 'con los representantes',\n",
-       " 'los representantes designados',\n",
-       " 'representantes designados por',\n",
-       " 'designados por los',\n",
-       " 'por los grupos',\n",
-       " 'los grupos políticos',\n",
-       " 'grupos políticos con',\n",
-       " 'políticos con representación',\n",
-       " 'con representación parlamentaria',\n",
-       " 'representación parlamentaria ,',\n",
-       " 'parlamentaria , vengo',\n",
-       " ', vengo en',\n",
-       " 'vengo en proponer',\n",
-       " 'en proponer al',\n",
-       " 'proponer al Excmo',\n",
-       " 'al Excmo .',\n",
-       " 'Excmo . señor',\n",
-       " '. señor don',\n",
-       " 'señor don Pedro',\n",
-       " 'don Pedro Sánchez',\n",
-       " 'Pedro Sánchez Pérez-Castejón',\n",
-       " 'Sánchez Pérez-Castejón ,',\n",
-       " 'Pérez-Castejón , como',\n",
-       " ', como candidato',\n",
-       " 'como candidato a',\n",
-       " 'candidato a la',\n",
-       " 'a la Presidencia',\n",
-       " 'la Presidencia del',\n",
-       " 'Presidencia del Gobierno',\n",
-       " 'del Gobierno .',\n",
-       " 'Gobierno . Lo',\n",
-       " '. Lo que',\n",
-       " 'Lo que comunico',\n",
-       " 'que comunico a',\n",
-       " 'comunico a V.E',\n",
-       " 'a V.E .',\n",
-       " 'V.E . para',\n",
-       " '. para que',\n",
-       " 'para que se',\n",
-       " 'que se formule',\n",
-       " 'se formule al',\n",
-       " 'formule al Congreso',\n",
-       " 'al Congreso de',\n",
-       " 'Congreso de los',\n",
-       " 'de los Diputados',\n",
-       " 'los Diputados la',\n",
-       " 'Diputados la oportuna',\n",
-       " 'la oportuna propuesta',\n",
-       " 'oportuna propuesta .',\n",
-       " 'propuesta . Palacio',\n",
-       " '. Palacio de',\n",
-       " 'Palacio de la',\n",
-       " 'de la Zarzuela',\n",
-       " 'la Zarzuela ,',\n",
-       " 'Zarzuela , 2',\n",
-       " ', 2 de',\n",
-       " '2 de febrero',\n",
-       " 'de febrero de',\n",
-       " 'febrero de 2016',\n",
-       " 'de 2016 .',\n",
-       " '2016 . Felipe',\n",
-       " '. Felipe VI',\n",
-       " 'Felipe VI ,',\n",
-       " 'VI , Rey',\n",
-       " ', Rey .',\n",
-       " 'Rey . El',\n",
-       " '. El presidente',\n",
-       " 'El presidente del',\n",
-       " 'presidente del Congreso',\n",
-       " 'del Congreso de',\n",
-       " 'Congreso de los',\n",
-       " 'de los Diputados',\n",
-       " 'los Diputados ,',\n",
-       " 'Diputados , Patxi',\n",
-       " ', Patxi López',\n",
-       " 'Patxi López Álvarez',\n",
-       " 'López Álvarez .']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from nltk.util import ngrams\n",
-    "tree_grams = list(ngrams(tokens, 3))\n",
-    "[' '.join(x) for x in tree_grams]"
    ]
   }
  ],
