--- a/00 Hello World.ipynb
+++ b/00 Hello World.ipynb
@@ -11,6 +11,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "pycharm": {
      "is_executing": true,
      "name": "#%%\n"
