--- a/03 Exploring Data.ipynb
+++ b/03 Exploring Data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,30 +493,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cálido.a.01\n",
-      "cálido.a.02\n",
-      "cálido.a.03\n",
-      "amable.a.10\n",
-      "cálido.a.05\n",
-      "afectuoso.a.01\n",
-      "cálido.a.07\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['cálido', 'cálido', 'cálido', 'amable', 'cálido', 'afectuoso', 'cálido']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "wncr = WordNetCorpusReader('./wordnet_spa', None)\n",
     "\n",
     "word = 'cálido'\n",
     "\n",
-    "for ss in wncr.synsets(word):\n",
-    "    print(ss.name())"
+    "[ss.name().split('.')[0] for ss in wncr.synsets(word)]"
    ]
   },
   {
